# Redash-LLM-Assistant

./: .env  README.md  pyproject.toml  requirements.txt
Backend/: agents.py
EDA/: EDA.ipynb
Scripts/: db_tools.py
tests/: test_table_creation.py
